--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,5 @@ dependencies {
     implementation 'androidx.room:room-runtime:2.2.3'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.2.1"
     kapt 'androidx.room:room-compiler:2.2.3'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 }
